// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UpdateContact > should render responsive 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-[51] flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-theme-dark-950/80 dim:bg-theme-dim-950/80 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl dim:border dim:border-theme-dim-800 dark:border dark:border-theme-dark-700 sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-3.5 rounded text-theme-secondary-700 transition-all duration-100 ease-linear hover:bg-theme-navy-200 hover:text-theme-navy-700 dim:text-theme-dim-200 dim:hover:bg-theme-dim-700 dim:hover:text-theme-dim-50 dark:text-theme-secondary-200 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50 md:mr-6 md:mt-3.5"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-b border-theme-secondary-300 px-6 py-3.5 dim:border-theme-dim-700 dark:border-theme-dark-700"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-semibold leading-5 md:pt-0 md:text-lg"
            >
              Edit Contact
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            <div
              class="mt-8"
            >
              <form
                class="space-y-5"
                data-testid="contact-form"
              >
                <fieldset
                  class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
                >
                  <label
                    class="FormLabel hover:text-theme-primary-600! mb-2 flex font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 text-sm"
                    data-testid="FormLabel"
                    for="name"
                  >
                    Name
                  </label>
                  <div
                    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
                        data-testid="contact-form__name-input"
                        name="name"
                        type="text"
                        value="Brian"
                      />
                    </div>
                  </div>
                </fieldset>
                <fieldset
                  class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
                  data-testid="ContactForm__address"
                >
                  <label
                    class="FormLabel hover:text-theme-primary-600! mb-2 flex font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 text-sm"
                    data-testid="FormLabel"
                    for="address"
                  >
                    Address
                  </label>
                  <div
                    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
                        data-testid="contact-form__address-input"
                        name="address"
                        profile="[object Object]"
                        type="text"
                      />
                    </div>
                  </div>
                </fieldset>
                <div
                  class="-mx-6 flex border-theme-secondary-300 px-6 dim:border-theme-dim-700 dark:border-theme-dark-700 sm:border-t justify-between"
                >
                  <div>
                    <div
                      class="fixed inset-x-0 bottom-0 z-50 flex gap-3 border-t border-theme-secondary-300 bg-theme-background px-8 py-3 dim:border-theme-dim-700 dim:bg-theme-dim-950 dark:border-theme-dark-700 dark:bg-theme-dark-950 sm:relative sm:inset-auto sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dim:bg-transparent sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none [.modal-footer_&]:mt-4 [.modal-footer_&]:sm:-mx-6 [.modal-footer_&]:sm:border-t [.modal-footer_&]:sm:px-6 [.modal-footer_&]:sm:pt-4 pb-3 sm:pb-0 border-none sm:mt-4"
                    >
                      <button
                        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white"
                        data-testid="contact-form__cancel-btn"
                        type="button"
                      >
                        <div
                          class="flex items-center gap-2"
                        >
                          Cancel
                        </div>
                      </button>
                      <button
                        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 dim:bg-theme-navy-800"
                        data-testid="contact-form__save-btn"
                        type="submit"
                      >
                        <div
                          class="flex items-center gap-2"
                        >
                          Save
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateContact > should render responsive 2`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-[51] flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-theme-dark-950/80 dim:bg-theme-dim-950/80 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl dim:border dim:border-theme-dim-800 dark:border dark:border-theme-dark-700 sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-3.5 rounded text-theme-secondary-700 transition-all duration-100 ease-linear hover:bg-theme-navy-200 hover:text-theme-navy-700 dim:text-theme-dim-200 dim:hover:bg-theme-dim-700 dim:hover:text-theme-dim-50 dark:text-theme-secondary-200 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50 md:mr-6 md:mt-3.5"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-b border-theme-secondary-300 px-6 py-3.5 dim:border-theme-dim-700 dark:border-theme-dark-700"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-semibold leading-5 md:pt-0 md:text-lg"
            >
              Edit Contact
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            <div
              class="mt-8"
            >
              <form
                class="space-y-5"
                data-testid="contact-form"
              >
                <fieldset
                  class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
                >
                  <label
                    class="FormLabel hover:text-theme-primary-600! mb-2 flex font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 text-sm"
                    data-testid="FormLabel"
                    for="name"
                  >
                    Name
                  </label>
                  <div
                    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
                        data-testid="contact-form__name-input"
                        name="name"
                        type="text"
                        value="Brian"
                      />
                    </div>
                  </div>
                </fieldset>
                <fieldset
                  class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
                  data-testid="ContactForm__address"
                >
                  <label
                    class="FormLabel hover:text-theme-primary-600! mb-2 flex font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 text-sm"
                    data-testid="FormLabel"
                    for="address"
                  >
                    Address
                  </label>
                  <div
                    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
                        data-testid="contact-form__address-input"
                        name="address"
                        profile="[object Object]"
                        type="text"
                      />
                    </div>
                  </div>
                </fieldset>
                <div
                  class="-mx-6 flex border-theme-secondary-300 px-6 dim:border-theme-dim-700 dark:border-theme-dark-700 sm:border-t justify-between"
                >
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 disabled:cursor-not-allowed bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-300 focus:ring-theme-danger-300 mt-0 h-min sm:mt-4"
                    data-testid="contact-form__delete-btn"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      <div>
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="trash"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                      <span>
                        Delete Contact
                      </span>
                    </div>
                  </button>
                  <div>
                    <div
                      class="fixed inset-x-0 bottom-0 z-50 flex gap-3 border-t border-theme-secondary-300 bg-theme-background px-8 py-3 dim:border-theme-dim-700 dim:bg-theme-dim-950 dark:border-theme-dark-700 dark:bg-theme-dark-950 sm:relative sm:inset-auto sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dim:bg-transparent sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none [.modal-footer_&]:mt-4 [.modal-footer_&]:sm:-mx-6 [.modal-footer_&]:sm:border-t [.modal-footer_&]:sm:px-6 [.modal-footer_&]:sm:pt-4 pb-3 sm:pb-0 border-none sm:mt-4"
                    >
                      <button
                        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white"
                        data-testid="contact-form__cancel-btn"
                        type="button"
                      >
                        <div
                          class="flex items-center gap-2"
                        >
                          Cancel
                        </div>
                      </button>
                      <button
                        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 dim:bg-theme-navy-800"
                        data-testid="contact-form__save-btn"
                        type="submit"
                      >
                        <div
                          class="flex items-center gap-2"
                        >
                          Save
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateContact > should render responsive 3`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-[51] flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-theme-dark-950/80 dim:bg-theme-dim-950/80 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:max-w-2xl md:px-10"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl dim:border dim:border-theme-dim-800 dark:border dark:border-theme-dark-700 sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-3.5 rounded text-theme-secondary-700 transition-all duration-100 ease-linear hover:bg-theme-navy-200 hover:text-theme-navy-700 dim:text-theme-dim-200 dim:hover:bg-theme-dim-700 dim:hover:text-theme-dim-50 dark:text-theme-secondary-200 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50 md:mr-6 md:mt-3.5"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-b border-theme-secondary-300 px-6 py-3.5 dim:border-theme-dim-700 dark:border-theme-dark-700"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-semibold leading-5 md:pt-0 md:text-lg"
            >
              Edit Contact
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter the information below to update or delete the Contact.
            </div>
            <div
              class="mt-8"
            >
              <form
                class="space-y-5"
                data-testid="contact-form"
              >
                <fieldset
                  class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
                >
                  <label
                    class="FormLabel hover:text-theme-primary-600! mb-2 flex font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 text-sm"
                    data-testid="FormLabel"
                    for="name"
                  >
                    Name
                  </label>
                  <div
                    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
                        data-testid="contact-form__name-input"
                        name="name"
                        type="text"
                        value="Brian"
                      />
                    </div>
                  </div>
                </fieldset>
                <fieldset
                  class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
                  data-testid="ContactForm__address"
                >
                  <label
                    class="FormLabel hover:text-theme-primary-600! mb-2 flex font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 text-sm"
                    data-testid="FormLabel"
                    for="address"
                  >
                    Address
                  </label>
                  <div
                    class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
                        data-testid="contact-form__address-input"
                        name="address"
                        profile="[object Object]"
                        type="text"
                      />
                    </div>
                  </div>
                </fieldset>
                <div
                  class="-mx-6 flex border-theme-secondary-300 px-6 dim:border-theme-dim-700 dark:border-theme-dark-700 sm:border-t justify-between"
                >
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 disabled:cursor-not-allowed bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-300 focus:ring-theme-danger-300 mt-0 h-min sm:mt-4"
                    data-testid="contact-form__delete-btn"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      <div>
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="trash"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                      <span>
                        Delete Contact
                      </span>
                    </div>
                  </button>
                  <div>
                    <div
                      class="fixed inset-x-0 bottom-0 z-50 flex gap-3 border-t border-theme-secondary-300 bg-theme-background px-8 py-3 dim:border-theme-dim-700 dim:bg-theme-dim-950 dark:border-theme-dark-700 dark:bg-theme-dark-950 sm:relative sm:inset-auto sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dim:bg-transparent sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none [.modal-footer_&]:mt-4 [.modal-footer_&]:sm:-mx-6 [.modal-footer_&]:sm:border-t [.modal-footer_&]:sm:px-6 [.modal-footer_&]:sm:pt-4 pb-3 sm:pb-0 border-none sm:mt-4"
                    >
                      <button
                        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white"
                        data-testid="contact-form__cancel-btn"
                        type="button"
                      >
                        <div
                          class="flex items-center gap-2"
                        >
                          Cancel
                        </div>
                      </button>
                      <button
                        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 dim:bg-theme-navy-800"
                        data-testid="contact-form__save-btn"
                        type="submit"
                      >
                        <div
                          class="flex items-center gap-2"
                        >
                          Save
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
